<resources>

    <string name="app_name">XBMControl</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">XBMControl</string>
    <string name="title_activity_remote">Remote</string>
    <string name="title_activity_source">SourceActivity</string>
    <string name="title_global">XBMControl - %s</string>
    <string name="title_empty">%s</string>
    <string name="title_activity_source_directory">SourceDirectoryActivity</string>
    <string name="up">Up</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_configuration">XBMControl - Configuration</string>
    <string name="host">host</string>
    <string name="port">port</string>
    <string name="tomeout">timeout</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="music">Music</string>
    <string name="videos">Videos</string>
    <string name="pictures">Pictures</string>

</resources>